--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.AtchIAOS"
         tools:targetApi="31">
         <activity
+            android:name=".temp.component.MmseView"
+            android:exported="false"
+            android:label="@string/title_activity_mmse_view"
+            android:theme="@style/Theme.AtchIAOS" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
